update in inside

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -19,6 +19,7 @@
             <a href="#">Contact</a>
             <form style="display: inline" action="login" method="get">
                 <button  class="btnLogin-popup">Login</button>
+                <button  class="pup">Register</button>
             </form>
         </nav> 
     </header>
