--- a/static/style2.css
+++ b/static/style2.css
@@ -7,7 +7,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,36 +16,34 @@ body{
     background-position: center;
 }
 
-header{
+header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     padding: 20px 100px;
-    /* background: red; */
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 99;
 }
 
-.logo{
+.logo {
     font-size: 2em;
     color: #121111;
     user-select: none;
 }
 
-.navigation a{
+.navigation a {
     position: relative;
     font-size: 1.1em;
     color: #0b0a0a;
     text-decoration: none;
     font-weight: 500;
     margin-left: 40px;
-
 }
 
-.navigation a::after{
+.navigation a::after {
     content: '';
     position: absolute;
     left: 0;
@@ -53,16 +51,14 @@ header{
     width: 100%;
     height: 3px;
     background: #0c0b0b;
-    /* border-radius: 5px;
-    transform-origin: right; */
     transform: scaleX(0);
     transition: transform .5s;
 }
 
-.navigation a:hover:after{
-    /* transform-origin: left; */
+.navigation a:hover:after {
     transform: scaleX(1);
 }
+
 .navigation .btnLogin-popup {
     width: 130px;
     height: 50px;
@@ -75,11 +71,29 @@ header{
     color: #080808;
     font-weight: 500;
     margin-left: 40px;
-
 }
 
 .navigation .btnLogin-popup:hover {
     background: #fff;
     color: #162938;
-
 }
+
+.navigation .pup:hover {
+    background: #fff;
+    color: #162938;
+}
+ 
+.navigation .pup {
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid #090909;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: #ffffff;
+    font-weight: 500;
+    margin-left: 40px;
+    background: #000000;
+} 
