udate into yoga detection web application project

--- a/app1/static/style2.css
+++ b/app1/static/style2.css
@@ -7,43 +7,38 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url("/static/aa.jpg") fixed;
-    background-position: center;
-}
 
-header {
+
+header{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     padding: 20px 100px;
+    /* background: red; */
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 99;
 }
 
-.logo {
+.logo{
     font-size: 2em;
     color: #121111;
     user-select: none;
 }
 
-.navigation a {
+.navigation a{
     position: relative;
     font-size: 1.1em;
     color: #0b0a0a;
     text-decoration: none;
     font-weight: 500;
     margin-left: 40px;
+
 }
 
-.navigation a::after {
+.navigation a::after{
     content: '';
     position: absolute;
     left: 0;
@@ -51,14 +46,16 @@ header {
     width: 100%;
     height: 3px;
     background: #0c0b0b;
+    /* border-radius: 5px;
+    transform-origin: right; */
     transform: scaleX(0);
     transition: transform .5s;
 }
 
-.navigation a:hover:after {
+.navigation a:hover:after{
+    /* transform-origin: left; */
     transform: scaleX(1);
 }
-
 .navigation .btnLogin-popup {
     width: 130px;
     height: 50px;
@@ -71,11 +68,13 @@ header {
     color: #080808;
     font-weight: 500;
     margin-left: 40px;
+
 }
 
 .navigation .btnLogin-popup:hover {
     background: #fff;
     color: #162938;
+
 }
 
 .navigation .pup:hover {
